--- a/tabadminCV.css
+++ b/tabadminCV.css
@@ -1206,4 +1206,6 @@ stats.cjgrid.sinbr > * > span {
 .crcll-call-botons.cjflex > span:last-child {background: #591d1d;}
 .cr-tbm-groups .cambia-icon i {font-size: 2rem;}
 .c-tbm-botons{max-height:600px;overflow:auto;flex-wrap:wrap;gap:5px;border:0}.botontbm{flex-direction:column;gap:10px;min-width:230px;border:var(--border);background:var(--background-1);border-radius:var(--border-radius);padding:10px;box-sizing:border-box;flex-grow:1}.botontbm.cjflex>span{color:var(--accent);border-bottom:var(--border);font-weight:600;border-color:var(--accent);padding:5px 0 5px 0;margin:0 0 10px}.botontbm.cjflex .codebox{width:200px}
-
+.crtbuex-m-mini.cjgrid > br {
+    display: none;
+}
